Customize grid size. Need to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -7,26 +7,31 @@ body {
     width: 100%;
     margin: 0;
     display: flex;
+    flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
+    gap: 100px;
 }
 
 .grid-container {
     display: flex;
     max-width: 960px;
     max-height: 960px;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: center;
 }
 
 .gridSquare {
-    height: 50px;
     width: 50px;
+    height: 50px;
     outline: grey solid 1px;
-    flex: 0 1 25%;
-    
+    min-width: 0;
+    flex: 0 1 50px;
 }
 
+.rows {
+    display: flex;
+}
 
 .hover {
     background-color: rgb(43, 49, 49);
